<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_260sdp"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:padding="@dimen/_16sdp"
    android:orientation="vertical">

    <TextView
        android:fontFamily="@font/poppins_bold"
        android:id="@+id/tvPopupTitle"
        android:padding="@dimen/_8sdp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="Logout" />

    <TextView
        android:fontFamily="@font/poppins_regular"
        android:includeFontPadding="false"
        android:id="@+id/tvPopupMessage"
        android:padding="@dimen/_8sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        tools:text="@string/logout_message" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_8sdp">

        <Button
            android:includeFontPadding="false"
            android:id="@+id/btNegative"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/_8sdp"
            android:text="@string/cancel"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/btPositive"
            style="@style/Widget.Material3.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_weight="1"
            android:text="@string/ok" />

    </LinearLayout>
</LinearLayout>