<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.graphics.Color" />

        <variable
            name="loginFragment"
            type="com.example.loginapp.view.fragments.login.LoginFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_20sdp">

            <TextView
                android:id="@+id/title_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_45sdp"
                android:fontFamily="@font/inter_bold"
                android:includeFontPadding="false"
                android:text="@string/login_account"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/inter_bold"
                android:includeFontPadding="false"
                android:text="@string/login_welcome_text"
                android:textColor="@color/gray"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_login" />

            <LinearLayout
                android:id="@+id/login_option_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:background="@drawable/wrap_select_option_login_background"
                android:orientation="horizontal"
                android:padding="@dimen/_6sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/login_phone_number"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/background_login_select"
                    android:fontFamily="@font/inter_bold"
                    android:includeFontPadding="false"
                    android:onClick='@{() -> loginFragment.onNumberPhoneBtn()}'
                    android:text="@string/phone_number"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatButton

                    android:id="@+id/login_email"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/wrap_select_option_login_background"
                    android:fontFamily="@font/inter_bold"
                    android:onClick='@{() -> loginFragment.onEmailClick()}'
                    android:text="@string/email"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/number_phone_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_76sdp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/login_option_view">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_22sdp"
                        android:layout_height="@dimen/_16sdp"
                        android:src="@drawable/vietnam" />

                    <ImageView
                        android:layout_width="@dimen/_8sdp"
                        android:layout_height="@dimen/_5sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:src="@drawable/down" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="?attr/textInputFilledStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:textColorHint="#000"
                        app:boxBackgroundColor="@color/gray_1000"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPhoneNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/phone_number"
                            android:inputType="phone"
                            android:singleLine="true"
                            android:textColorHint="@color/gray"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/requestOtpBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_40ssp"
                    android:enabled="false"
                    android:onClick="@{() -> loginFragment.onLoginPhoneNumberClick()}"
                    android:text="@string/request_otp"
                    android:textAllCaps="false"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/login_option_view">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTextInputLayout"
                    style="?attr/textInputFilledStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:textColorHint="#000"
                    app:boxBackgroundColor="@color/gray_1000"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:singleLine="true"
                        android:textColorHint="@color/gray"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordTextInputLayout"
                    style="?attr/textInputFilledStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:textColorHint="#000"
                    app:boxBackgroundColor="@color/gray_1000"
                    app:endIconMode="password_toggle"
                    app:startIconDrawable="@drawable/lock">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColorHint="@color/gray"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tvLoginFailed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/login_email_false_message"
                    android:textColor="#D70000"
                    android:visibility="gone"
                    tools:text="Invalid Username or Password. Try Again!" />

                <Button
                    android:id="@+id/loginEmailBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:onClick="@{() -> loginFragment.onLoginWithEmailClick()}"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_254sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/login_option_view">

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:background="?attr/dividerHorizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:background="?attr/dividerHorizontal" />

            </LinearLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/view_login_google"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_45sdp"
                android:background="@drawable/login_with_google_background"
                android:elevation="10dp"
                android:padding="@dimen/_2sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view">

                <ImageView
                    android:id="@+id/logo_google"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:src="@drawable/flat_color_icons_google"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/login_google_btn"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/login_google_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/login_with_google"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="?attr/selectableItemBackground"
                android:fontFamily="@font/inter_bold"
                android:onClick="@{() -> loginFragment.goRegisterScreen()}"
                android:padding="@dimen/_8sdp"
                android:text="@string/create_account_label"
                android:textColor="@color/cam"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_login_google" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
